不要なプレフィックスを削除
